# iliad-apis-features

./: .env  .gitignore  .metadata-generation-ecosystem.md  .prompt.md  CLAUDE.md  PROFILES.md  README.md  USAGE.md  bblocks-config.yaml  build.sh
.agents/: .agent.md  (+13 more)
checkin/: ARCHITECTURE.md  CHEKIN-ARCHITECTURE.md  README.md  __init__.py  _smoke.py  cli.py  pyproject.toml  start_checkin.sh
checkin/api/: server.py
checkin/core/: bblock_index.py  bblock_match.py  bblock_writer.py  profile.py  sniff.py  transformer_runner.py  vocab_index.py  vocab_match.py
checkin/docs/: 01-overview.puml  02-wizard-flow.puml  03-core-modules.puml  04-api-sequence.puml  05-transformer-library.puml  06-bblock-output.puml
checkin/iliad_checkin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
checkin/transformers/csv-to-stac-item/: canonical.schema.json  transform.py  transformer.json
checkin/transformers/csv-to-stac-item/tests/: input.json  params.json
checkin/transformers/json-to-geoparquet/: canonical.schema.json  transform.py  transformer.json
checkin/transformers/json-to-geoparquet/tests/: input.json
checkin/transformers/json-to-json-feature/: canonical.schema.json  transform.py  transformer.json
checkin/transformers/json-to-json-feature/tests/: input.json  params.json
checkin/transformers/json-to-nested-json/: canonical.schema.json  transform.py  transformer.json
checkin/transformers/netcdf-structure-to-json/: canonical.schema.json  transform.py  transformer.json
checkin/web/: index.html
checkin/web/static/: style.css  wizard.js
(+435 files in other folders)
